phase3: api-public-read shelter map 추가